[gd_scene load_steps=10 format=3 uid="uid://baajq84gj2rpv"]

[ext_resource type="Script" uid="uid://cf50wf0rmnp04" path="res://scenes/ui/mainMenu/left_menu_button.gd" id="1_nynly"]
[ext_resource type="Theme" uid="uid://dwimkpe573wse" path="res://assets/themes/menu.tres" id="1_rfmrf"]

[sub_resource type="Animation" id="Animation_tfk7i"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_celvx"]
resource_name = "hide"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.475366, 349.5, -900, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_w2cg8"]
resource_name = "hidePressed"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(45, -0.25, 0, 0.633333, 43.7589, -900, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_d032b"]
resource_name = "show"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-900, -0.25, 0, 0.25, 0, 0, -0.4, -4, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1hlc0"]
_data = {
&"RESET": SubResource("Animation_tfk7i"),
&"hide": SubResource("Animation_celvx"),
&"hidePressed": SubResource("Animation_w2cg8"),
&"show": SubResource("Animation_d032b")
}

[sub_resource type="Gradient" id="Gradient_dmodm"]
offsets = PackedFloat32Array(0, 0.58256)
colors = PackedColorArray(0, 0, 0, 1, 0.592157, 0.592157, 0.592157, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8erm3"]
gradient = SubResource("Gradient_dmodm")
width = 88
height = 40

[node name="LeftMenuButton" type="Button" node_paths=PackedStringArray("anim")]
custom_minimum_size = Vector2(0, 32)
offset_right = 296.0
offset_bottom = 40.0
theme = ExtResource("1_rfmrf")
text = "PLAY"
alignment = 0
script = ExtResource("1_nynly")
anim = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1hlc0")
}

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(88, 40)
layout_mode = 0
offset_left = -62.0
offset_right = 26.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_8erm3")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
